# touchless

./: .gitignore  Cargo.toml  README.md  launch.ps1  launch.sh
API/: main.py
py_scripts/: data_capture.py  data_capture_mouvement_press_to_record.py  data_capture_pos_abs.py  gesture_labels.pkl  gesture_labels_dynamic.pkl  gesture_labels_mouvement.pkl  gesture_model_1dcnn.keras  gesture_model_mouvement_xgb.pkl  gesture_model_xgb.pkl  imagecapture.py  model_run.py  model_run_1D_CNN_delta.py  model_run_pos_abs.py  model_train.py  model_train_mouvement_1D_CNN_delta.py  model_train_pos_abs.py  requirements.txt
py_scripts/data/: gesture_data _default.csv  gesture_data.csv  gesture_data_mouvement.csv
py_scripts/dynamic_model/: data_capture_dynamic.py  data_capture_mouvement.py  dynamic_model_run.py  dynamic_model_train.py  gesture_labels_dynamic.pkl  gesture_model.keras  model_run_mouvement.py  model_train_mouvement.py
py_scripts/dynamic_model/data/: dynamic_gestures.csv  gesture_data_mouvement.csv  gesture_labels_dynamic.pkl  gesture_model.keras
py_scripts/static_model/: data_capture.py  gesture_labels.pkl  gesture_labels_2h.pkl  gesture_model_xgb.pkl  gesture_model_xgb_2h.pkl  gesture_model_xgb_default.pkl  gesture_profile.csv  gesture_runtime_log.csv  log_sample_analytics.py  mediapipe_log.csv  model_run.py  model_train.py
src/: app.rs  main.rs
src/views/: home.rs  settings.rs
