[package]
name = "touchless"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui_extras = { version = "0.29.0", features = ["all_loaders"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }